# cash-flow

./: .gitignore  README.md  pyproject.toml
backend/authentication/: serializers.py  views.py
backend/core/: settings.py  urls.py
backend/finances/: models.py
backend/finances/application/use_cases/: create_installment_expense.py  list_expenses_by_month.py
backend/finances/interfaces/api/: urls.py
backend/finances/interfaces/api/v1/: mixins.py  serializers.py  urls.py  (+1 more)
backend/finances/migrations/: 0001_initial.py  0002_paidrecurringexpense.py
backend/finances/services/: category_service.py  expense_list_service.py  expense_payment_service.py  installment_expense_service.py
backend/finances/utils/: validations.py
frontend/: .prettierrc.js  jest.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/expenses/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/auth/: AuthLayout.tsx  BrandingPanel.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/components/expenses/: DeleteModal.tsx  ExpenseActionsBar.tsx  ExpenseCard.tsx  ExpenseFilters.tsx  ExpenseForm.tsx  ExpenseModal.tsx  SelectAllCheckbox.tsx
frontend/src/components/ui/: CategoryComboBox.tsx  CategorySelect.tsx  Spinner.tsx  date-picker.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useExpensesActions.ts  useExpensesData.ts  useExpensesSelection.ts
frontend/src/lib/: api.ts
(+6 files in other folders)
