[project]
name = "cash-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "python-dateutil>=2.9.0.post0",
    "python-decouple>=3.8",
]

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = './backend'
addopts = '-p no:warnings'
DJANGO_SETTINGS_MODULE = 'core.settings'
